# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

15-Sep-2010 Jean-Marie Simonet
 # [#22450] Add level filter to admin categories view. Thanks Andrew and Christophe.
 $ Changed figures to strings in Menu items manager maxlevels filter
 # [#22427] Module Manager: Modules - Module Filter Only Lists "Administrator Menu" at times. Thanks Michael.
 
15-Sep-2010 Andrew Eddie
 # Fixed issue [#22125] We don't have CSS for system "warning" messages (Artyom Bisyarin, Elin Waring).
 # Fixed issue [#22385] Make meta data not required (Elin Waring).
 # Fixed issue [#22245] Default site metadata (Brian Teeman, Matt Thomas, Ole Bang Ottosen, Michael Babker).
 # Fixed issue [#22030] Full Path Disclosure 2 (Brian Teeman, Hannes Papenberg, Roland Dalmulder, Michael Babker).
 # Fixed issue [#22434] poor choice of language (Brian Teeman, Bill Richardson).
 # Fixed issue [#20794] ftp host and port fields, not validated (Rob Joyce, Roland Dalmulder, Troy Hall, Christophe Demko).
 # Fixed issue [#21839] Incorrect display in Menu manager - showing 8 pages (Bill Richardson, Ian MacLennan).
 # Fixed issue [#22212] Create New Module (Brian Teeman, Michael Babker).
 # Fixed issue [#22244] control_panel0004Test.php system test failing (Matt Thomas).
 # Fixed issue [#22021] ACL System Tests (Matt Thomas).
 # Fixed issue [#21791] Menu Item Alias (Stian Totland, Christophe Demko).

14-Sep-2010 Jean-Marie Simonet
 # [#22288] Content category - displaying title twice. Thanks Bill.
 $ [#22403] typo in installation language files. Thanks Brian and Bill.
 $ [#22404] typo in en-GB.com_users.ini language file. Thanks Brian and Bill.
 $ [#22405] typo in en-GB.ini language file. Thanks Brian and Bill.
 $ [#22407] us spelling in template language file. Thanks Brian and Bill.
 $ [#22408] language file capitalisation. Thanks Brian and Bill.
 $ [#22409] language file typos, spelling. Thanks Brian and Bill.